# Agno-Marketing

./: .env.example  README.md  agent.py  pyproject.toml  transcripter.py
prompts/: copywriter.md
tmp/: storage.db
tools/: creators.py  transcripts.py
transcripts/: gran_concursos.json
